--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -8,7 +8,7 @@ on:
 permissions:
   contents: write
   pull-requests: write
-  repository-projects: write
+  repository-projects: read
   # only required for workflows in private repositories
   actions: read
   security-events: write
