--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -11,6 +11,7 @@ permissions:
   repository-projects: write
   issues: write
   discussions: write
+  packages: write
   # only required for workflows in private repositories
   actions: write
   security-events: write
