--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -12,6 +12,7 @@ permissions:
   issues: write
   discussions: write
   packages: write
+  pages: write
   # only required for workflows in private repositories
   actions: write
   security-events: write
