--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -13,6 +13,7 @@ permissions:
   discussions: write
   packages: write
   pages: write
+  statuses: write
   # only required for workflows in private repositories
   actions: write
   security-events: write
