--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -11,6 +11,7 @@ permissions:
   attestations: write
   checks: write
   contents: write
+  deployments: write
   issues: write
   packages: write
   pages: write
