ci(release): add discussions write

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -14,6 +14,7 @@ permissions:
   deployments: write
   id-token: write|none
   issues: write
+  discussions: write
   packages: write
   pages: write
   pull-requests: write
