ci(release): permissions: write-all

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -5,22 +5,7 @@ on:
     branches:
       - main
 
-permissions:
-  # only required for workflows in private repositories
-  actions: write
-  attestations: write
-  checks: write
-  contents: write
-  deployments: write
-  id-token: write
-  issues: write
-  discussions: write
-  packages: write
-  pages: write
-  pull-requests: write
-  repository-projects: write
-  security-events: write
-  statuses: write
+permissions: write-all
 
 concurrency:
   group: release
