ci(release): add number prerelease-type

--- a/.github/prerelease-config.json
+++ b/.github/prerelease-config.json
@@ -1,6 +1,7 @@
 {
   "release-type": "simple",
   "prerelease": true,
+  "prerelease-type": "number",
   "versioning": "prerelease",
   "packages": {
     ".": {
