ci(release): add test prerelease-type

--- a/.github/prerelease-config.json
+++ b/.github/prerelease-config.json
@@ -1,7 +1,7 @@
 {
   "release-type": "simple",
   "prerelease": true,
-  "prerelease-type": "number",
+  "prerelease-type": "test",
   "versioning": "prerelease",
   "packages": {
     ".": {
