refactor: remove example code

--- a/.github/prerelease-config.json
+++ b/.github/prerelease-config.json
@@ -5,8 +5,7 @@
   "versioning": "prerelease",
   "packages": {
     ".": {
-      "type": "generic",
-      "extra-files": [".platform/terraform/environments/staging/main.tf"]
+      "type": "generic"
     }
   }
 }
