--- a/.github/release-config.json
+++ b/.github/release-config.json
@@ -2,8 +2,7 @@
   "release-type": "simple",
   "packages": {
     ".": {
-      "type": "generic",
-      "extra-files": [".platform/terraform/environments/production/main.tf"]
+      "type": "generic"
     }
   }
 }
