--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -4,7 +4,7 @@ on:
   push:
     branches: ["main"]
   repository_dispatch:
-    branches: ["release-please--branches--main"]
+    branches: ["main"]
 
 permissions:
   contents: write
