fix: release-please--branches--main push

--- a/.github/workflows/action-debug.yaml
+++ b/.github/workflows/action-debug.yaml
@@ -5,6 +5,7 @@ run-name: ${{ github.actor }} is testing out GitHub Actions 🚀
 on:
   pull_request:
   push:
+    branches: ["release-please--branches--main"]
 
 jobs:
   Explore-GitHub-Actions:
