--- a/.github/workflows/action-debug.yaml
+++ b/.github/workflows/action-debug.yaml
@@ -4,8 +4,9 @@ run-name: ${{ github.actor }} is testing out GitHub Actions 🚀
 
 on:
   pull_request:
+    types: [ labeled, opened, synchronize, reopened ]
   push:
-    branches: ["release-please--branches--main"]
+    branches: [ main, release-please--branches--main ]
 
 jobs:
   Explore-GitHub-Actions:
