--- a/.github/workflows/action-debug.yaml
+++ b/.github/workflows/action-debug.yaml
@@ -3,10 +3,7 @@ name: GitHub Actions Debug
 run-name: ${{ github.actor }} is testing out GitHub Actions 🚀
 
 on:
-  pull_request:
-    types: [ labeled, opened, synchronize, reopened ]
-  push:
-    branches: [ main, release-please--branches--main ]
+  workflow_dispatch:
 
 jobs:
   Explore-GitHub-Actions:
