--- a/.github/workflows/action-debug.yaml
+++ b/.github/workflows/action-debug.yaml
@@ -3,7 +3,7 @@ name: GitHub Actions Debug
 run-name: ${{ github.actor }} is testing out GitHub Actions 🚀
 
 on:
-  workflow_dispatch:
+  pull_request:
 
 jobs:
   Explore-GitHub-Actions:
