fix: action trigger (#35)
* fix: test triggers

* fix: test triggers

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -3,6 +3,10 @@ name: Release
 on:
   push:
     branches: ["main"]
+  workflow_run:
+    workflows: ["action-debug","actions-debug2"] # Name of GitHub workflow to trigger in target repository
+    types:
+      - completed
 
 # The different jobs of this workflow need the following permissions
 permissions:
