fix(release): add manifest update as a additonal file to release PR

--- a/.github/release-config.json
+++ b/.github/release-config.json
@@ -2,7 +2,8 @@
   "release-type": "simple",
   "packages": {
     ".": {
-      "type": "generic"
+      "type": "generic",
+      "extra-files": [".github/release-manifest.json"]
     }
   }
 }
