--- a/.github/release-config.json
+++ b/.github/release-config.json
@@ -3,7 +3,13 @@
   "packages": {
     ".": {
       "type": "generic",
-      "extra-files": [".github/release-manifest.json"]
+      "extra-files": [
+        {
+          "type": "json",
+          "path": ".github/release-manifest.json",
+          "jsonpath": "$."
+        }
+      ]
     }
   }
 }
