fix(release): update jsonpath

--- a/.github/release-config.json
+++ b/.github/release-config.json
@@ -7,7 +7,7 @@
         {
           "type": "json",
           "path": ".github/release-manifest.json",
-          "jsonpath": "$."
+          "jsonpath": "$[\".\"]"
         }
       ]
     }
