--- a/.github/release-config.json
+++ b/.github/release-config.json
@@ -5,6 +5,10 @@
       "type": "generic",
       "extra-files": [
         {
+          "type": "generic",
+          "path": "library/build.gradle.kts"
+        },
+        {
           "type": "json",
           "path": ".github/prerelease-manifest.json",
           "jsonpath": "$[\".\"]"
