--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -5,7 +5,12 @@ on:
     branches: ["main"]
 
 # The different jobs of this workflow need the following permissions
-permissions: write-all
+permissions:
+  contents: write
+  pull-requests: write
+  repository-projects: read
+  # only required for workflows in private repositories
+  actions: read
 
 concurrency:
   group: release
