feat(release): extend changelog with additional commit types

--- a/.github/release-config.json
+++ b/.github/release-config.json
@@ -1,5 +1,12 @@
 {
   "release-type": "simple",
+  "changelog-sections": [
+    { "type": "feat", "hidden": false, "section": "Features" },
+    { "type": "fix", "hidden": false, "section": "Bug Fixes" },
+    { "type": "chore", "hidden": false, "section": "Miscellaneous Chores" },
+    { "type": "build", "hidden": false, "section": "Miscellaneous Chores" },
+    { "type": "docs", "hidden": false, "section": "Docs" }
+  ],
   "packages": {
     ".": {
       "type": "generic",
