--- a/.github/prerelease-config.json
+++ b/.github/prerelease-config.json
@@ -3,6 +3,13 @@
   "prerelease": true,
   "prerelease-type": "rc",
   "versioning": "prerelease",
+  "changelog-sections": [
+    { "type": "feat", "hidden": false, "section": "Features" },
+    { "type": "fix", "hidden": false, "section": "Bug Fixes" },
+    { "type": "chore", "hidden": false, "section": "Miscellaneous Chores" },
+    { "type": "build", "hidden": false, "section": "Miscellaneous Chores" },
+    { "type": "docs", "hidden": false, "section": "Docs" }
+  ],
   "packages": {
     ".": {
       "type": "generic",
