fix(release): use GITHUB_TOKEN

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -51,7 +51,7 @@ jobs:
         with:
           config-file: ".github/prerelease-config.json"
           manifest-file: ".github/prerelease-manifest.json"
-          token: ${{ secrets.MY_RELEASE_PLEASE_TOKEN }}
+          #token: ${{ secrets.MY_RELEASE_PLEASE_TOKEN }}
 
   # This job runs tests before the creation of the prerelease
   prerelease-test:
@@ -80,7 +80,7 @@ jobs:
         with:
           config-file: ".github/release-config.json"
           manifest-file: ".github/release-manifest.json"
-          token: ${{ secrets.MY_RELEASE_PLEASE_TOKEN }}
+          #token: ${{ secrets.MY_RELEASE_PLEASE_TOKEN }}
 
   # This job runs post-prerelease steps
   post-prerelease:
