ci(release): rename CHANGELOG sections

--- a/.github/release-config.json
+++ b/.github/release-config.json
@@ -4,7 +4,7 @@
     { "type": "feat", "hidden": false, "section": "Features" },
     { "type": "fix", "hidden": false, "section": "Bug Fixes" },
     { "type": "chore", "hidden": false, "section": "Miscellaneous Chores" },
-    { "type": "build", "hidden": false, "section": "Miscellaneous Chores" },
+    { "type": "build", "hidden": false, "section": "Build System and Dependencies" },
     { "type": "docs", "hidden": false, "section": "Docs" }
   ],
   "packages": {
