--- a/.github/release-config.json
+++ b/.github/release-config.json
@@ -3,6 +3,7 @@
   "changelog-sections": [
     { "type": "feat", "hidden": false, "section": "Features" },
     { "type": "fix", "hidden": false, "section": "Bug Fixes" },
+    { "type": "refactor", "hidden": false, "section": "Code Refactoring" },
     { "type": "chore", "hidden": false, "section": "Miscellaneous Chores" },
     { "type": "build", "hidden": false, "section": "Build System and Dependencies" },
     { "type": "docs", "hidden": false, "section": "Docs" }
