ci(release): change prerelease-type to takai

--- a/.github/prerelease-config.json
+++ b/.github/prerelease-config.json
@@ -1,7 +1,7 @@
 {
   "release-type": "simple",
   "prerelease": true,
-  "prerelease-type": "rc",
+  "prerelease-type": "takai",
   "versioning": "prerelease",
   "changelog-sections": [
     { "type": "feat", "hidden": false, "section": "Features" },
