ci(release): change prerelease-type to takai

--- a/.github/prerelease-config.json
+++ b/.github/prerelease-config.json
@@ -1,25 +1,16 @@
 {
-  "release-type": "simple",
-  "prerelease": true,
-  "prerelease-type": "rc",
-  "versioning": "prerelease",
-  "changelog-sections": [
-    { "type": "feat", "hidden": false, "section": "Features" },
-    { "type": "fix", "hidden": false, "section": "Bug Fixes" },
-    { "type": "refactor", "hidden": false, "section": "Code Refactoring" },
-    { "type": "chore", "hidden": false, "section": "Miscellaneous Chores" },
-    { "type": "build", "hidden": false, "section": "Build System and Dependencies" },
-    { "type": "docs", "hidden": false, "section": "Docs" }
-  ],
   "packages": {
     ".": {
-      "type": "generic",
-      "extra-files": [
-        {
-          "type": "generic",
-          "path": "library/build.gradle.kts"
-        }
-      ]
+      "release-type": "node",
+      "changelog-path": "CHANGELOG.md",
+      "bump-minor-pre-major": true,
+      "bump-patch-for-minor-pre-major": true,
+      "draft": false,
+      "prerelease": true,
+      "prerelease-type": "takai",
+      "versioning": "prerelease",
+      "include-v-in-tag": false
     }
-  }
+  },
+  "$schema": "https://raw.githubusercontent.com/googleapis/release-please/main/schemas/config.json"
 }
